fixed dynamic spacing in fan decks

--- a/src/app.css
+++ b/src/app.css
@@ -267,7 +267,7 @@ body {
 
 @keyframes starry-night {
   0% {
-    transform: translate(0, 0);
+    transform: translate(0, 100%);
   }
   100% {
     transform: translate(0, -100%);
